# core-lite

./: README.md
.github/workflows/: docker-nightly.yml  docker-weekly.yml  linux-build.yml  release.yml
docker/orchestrator/: .gitignore  Dockerfile  docker-compose.source.yml  docker-compose.yml  pyproject.toml
docker/orchestrator/app/: __main__.py  alerting.py  cleanup.py  config.py  ctl.py  epoch_service.py  logging_config.py  main.py  management_api.py  models.py  node_client.py  process_manager.py  snapshot_cycle.py  state_manager.py  watchdog.py
docker/orchestrator/app/downloaders/: __init__.py  base.py  http_downloader.py  s3_downloader.py
docker/orchestrator/app/uploaders/: __init__.py  base.py  chunked_scp.py  http_rest.py  local_fs.py  rsync.py  s3.py  scp.py
docker/orchestrator/config/: default.yaml
docker/orchestrator/legacy/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/orchestrator/tests/: conftest.py  test_config.py  test_management_api.py  test_models.py  test_process_manager.py  test_rsync_uploader.py  test_snapshot_cycle.py  test_state_manager.py  test_version_check.py  test_watchdog.py
docker/ubuntu-env/: Dockerfile  README.md
lib/platform_common/: platform_common.vcxproj
lib/platform_efi/: platform_efi.vcxproj  uefi.h
lib/platform_os/: CMakeLists.txt  platform_os.vcxproj
src/: Qubic.vcxproj  common_buffers.h  four_q.h  private_settings.h  public_settings.h  qubic.cpp
test/: CMakeLists.txt  kangaroo_twelve.cpp  oracle_engine.cpp  pending_txs_pool.cpp  qpi.cpp  revenue.cpp  stdlib_impl.cpp  test.vcxproj
(+21 files in other folders)
