[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubic-orchestrator"
version = "0.1.0"
description = "Docker orchestrator for Qubic Core Lite node"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
s3 = ["aioboto3>=12.0,<14"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
qubic-orchestrator = "app.__main__:main"
orchestrator-ctl = "app.ctl:main"
